examples/kfserving/sklearn/v1beta1/v1/authorizationpolicy-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allowlist-by-paths
  namespace: frederik-coquelet
spec:
  action: ALLOW
  rules:
  - {}
