examples/kfserving/sklearn/v1beta1/v1/authorizationpolicy-notebook.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingressgateway-to-notebook
  namespace: frederik-coquelet
spec:
  selector:
    matchLabels:
      app: test
  rules:
    - from:
        - source:
            principals:
              - >-
                cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
