examples/kfserving/sklearn/v1beta1/v1/authorizationpolicy_allow_path.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allowlist-by-paths
  namespace: frederik-coquelet
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
        - /metrics   # The path to collect metrics by system pod.
        - /healthz
        - /wait-for-drain   # The path to probe by system pod.
